new changes committed

--- a/Home/Templates/StartNow.html
+++ b/Home/Templates/StartNow.html
@@ -64,7 +64,7 @@
             </ul>
 
             <!-- Buttons -->
-            <div class="d-flex">
+            <!-- <div class="d-flex">
                 <div class="btn-group me-2">
                     <button class="btn dropdown-toggle" style="background-color: #051622; color: white;"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -85,7 +85,7 @@
                         <li><a class="dropdown-item" href="#">Teacher</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </nav>
