--- a/Home/Templates/home.html
+++ b/Home/Templates/home.html
@@ -541,7 +541,7 @@
                             <h1 style="color: #FFFFFF;font-size: 3rem;">Efficient & Easy-to-Use Platform</h1>
                             <p style="color: #FFFFFF;">Our user-friendly platform makes submitting assignments and
                                 quizzes a breeze.</p>
-                            <p><a class="btn btn-lg" href="#" style="background-color: #2ebdb4; color: 04406b;">Browse
+                            <p><a class="btn btn-lg" href="#gallery" style="background-color: #2ebdb4; color: 04406b;">Browse
                                     Gallery</a></p>
                         </div>
                     </div>
@@ -558,6 +558,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <section id="gallery">
         <div class="container my-5">
             <h2 class="text-center mb-4" style="font-size: 2.8rem; color: #003366;">Platform Features</h2>
             <div class="container marketing">
@@ -608,6 +609,7 @@
                 </div>
             </div>
         </div>
+        </section>
         <!-- /.row -->
 
 
