--- a/Home/Templates/Ask.html
+++ b/Home/Templates/Ask.html
@@ -91,7 +91,7 @@
             </ul>
 
             <!-- Buttons -->
-            <div class="d-flex">
+            <!-- <div class="d-flex">
                 <div class="btn-group me-2">
                     <button class="btn dropdown-toggle" style="background-color: #051622; color: white;"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -119,7 +119,7 @@
                 </div>
 
 
-            </div>
+            </div> -->
         </div>
     </div>
 </nav>
