--- a/Home/Templates/Contact Us.html
+++ b/Home/Templates/Contact Us.html
@@ -49,7 +49,7 @@
 
 
             <!--     button    -->
-            <div class="d-flex">
+            <!-- <div class="d-flex">
                 <div class="btn-group me-2">
                     <button class="btn dropdown-toggle" style="background-color: #051622; color: white;"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,7 +77,7 @@
                 </div>
 
 
-            </div>
+            </div> -->
         </div>
 
     </div>
